--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,13 @@
 {
+  "routes": [
+    {
+      "src": "/api/get-metrics",
+      "dest": "/api/get-metrics",
+      "headers": {
+        "x-vercel-cache-control": "no-cache"
+      }
+    }
+  ],
   "functions": {
     "api/get-metrics": {
       "runtime": "edge"
